# ImpalaJIT

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  README.md  cmake_uninstall.cmake.in  example.impala  generate.cmake  impalajit.cc  impalajit_f90.cc  main.cc  main.cpp  test.c
CMake/: pkg-config.pc.in
benchmark/: dynamic.cc  static.cc
benchmark/impala_file/: pythagoras.impala  pythagoras_bak.impala
benchmarks/pythagoras/: CMakeLists.txt  benchmark.conf  pythagoras.cc  static_pythagoras_function.cc
benchmarks/pythagoras/impala_file/: pythagoras.impala
benchmarks/pythagoras/include/: static_pythagoras_function.hh
compiler/: CMakeLists.txt  driver.cc  function_context.cc
compiler/assembly/: assembly.cc  assembly.dasc
compiler/assembly/include/: assembly.hh  dasm_proto.h
compiler/code-gen/: code_generator.cc
compiler/code-gen/assembly/: assembly.cc  assembly.dasc  assembly__avx.cc  assembly__avx.dasc  assembly__sse_4_1.cc  assembly__sse_4_1.dasc
compiler/code-gen/assembly/include/: assembly.hh  assembly__avx.hh  assembly__sse_4_1.hh  dasm_proto.h  dasm_x86.h
compiler/code-gen/include/: calculation_helper.hh  code_generator.hh  ptr_map_container.hh
compiler/frontend/: parser.cc  parser.yy  scanner.cc  scanner.ll
compiler/frontend/include/: location.hh  parser.hh  position.hh  scanner.h  stack.hh
compiler/include/: assignment_expression.h  basic_expression.h  boolean_expression.h  comparison_expression.h  complex_expression.h  driver.h  expression.h  function_context.h
compiler/include/nodes/: assignment_nodes.h  boolean_nodes.h  compare_nodes.h  conditional_nodes.h  expression_nodes.h  external_function_nodes.h  node.h  return_nodes.h
compiler/include/types/: internal_types.hh
compiler/semantic_analysis/: semantic_analyzer.cc
compiler/semantic_analysis/include/: semantic_analyzer.hh
example/c/: example.c
example/cpp/: example.cc  example.conf
example/cpp/impala_file/: example.impala
example/f90/: example.F90  example.f90
example/f90/impala_file/: example.impala
frontend/: CMakeLists.txt  driver.cc  expression.h  location.hh  parser.cc  parser.yy  scanner.cc  scanner.h  scanner.ll  stack.hh
include/: impalajit.f90  impalajit.hh  impalajit_f90.h
include/impalajit/: types.hh
tests/: CMakeLists.txt  assignments.cc  conditionals_complex_1.cc  conditionals_complex_2.cc  conditionals_complex_false_1.cc  conditionals_complex_false_2.cc  conditionals_complex_false_3.cc  conditionals_complex_false_4.cc  conditionals_complex_true_1.cc  conditionals_complex_true_2.cc  conditionals_complex_true_3.cc  conditionals_complex_true_4.cc  conditionals_eq.cc  conditionals_eq_false.cc  conditionals_eq_true.cc  conditionals_gt.cc  conditionals_gt_false.cc  conditionals_gt_true.cc  conditionals_gte.cc  conditionals_gte_false.cc  conditionals_gte_true_1.cc  conditionals_gte_true_2.cc  conditionals_lt.cc  conditionals_lt_false.cc  conditionals_lt_true.cc  conditionals_lte.cc  conditionals_lte_false.cc  conditionals_lte_true_1.cc  conditionals_lte_true_2.cc  conditionals_neq.cc  conditionals_neq_false.cc  conditionals_neq_true.cc  conditionals_nested.cc  expressions_basic.cc  many_if.cc  multiple_functions.cc  parameter_count.cc  swe_waterheight.cc
tests/conf/: impala.conf
tests/impala_files/: assignment.impala  conditional_complex_1.impala  conditional_complex_2.impala  conditional_complex_false_1.impala  conditional_complex_false_2.impala  conditional_complex_false_3.impala  conditional_complex_false_4.impala  conditional_complex_true_1.impala  conditional_complex_true_2.impala  conditional_complex_true_3.impala  conditional_complex_true_4.impala  conditional_eq.impala  conditional_eq_false.impala  conditional_eq_true.impala  conditional_gt.impala  conditional_gt_false.impala  conditional_gt_true.impala  conditional_gte.impala  conditional_gte_false.impala  conditional_gte_true_1.impala  conditional_gte_true_2.impala  conditional_lt.impala  conditional_lt_false.impala  conditional_lt_true.impala  conditional_lte.impala  conditional_lte_false.impala  conditional_lte_true_1.impala  conditional_lte_true_2.impala  conditional_neq.impala  conditional_neq_false.impala  conditional_neq_true.impala  conditional_nested.impala  expression_basic.impala  many_if.impala  swe_waterheight.impala
tests/include/: defines.hh  double_comparison.hh
types/: dasm_gen_function.hh
